rebasing is fun