@@ -1,41 +1,67 @@
 package com.roboter5123.samplerest.rest;
+import com.roboter5123.samplerest.exception.GenericConflictException;
+import com.roboter5123.samplerest.exception.NoSuchUserExistsException;
 import com.roboter5123.samplerest.model.User;
+import com.roboter5123.samplerest.model.dto.LoginDTO;
+import com.roboter5123.samplerest.model.dto.UserDTO;
 import com.roboter5123.samplerest.repository.UserRepository;
-import com.roboter5123.samplerest.rest.assembler.UserAssembler;
-import jakarta.ws.rs.GET;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.PathParam;
-import jakarta.ws.rs.core.Response;
+import com.roboter5123.samplerest.rest.assembler.UserDTOAssembler;
+import jakarta.validation.Valid;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.EntityModel;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Path("users")
+@RestController
 public class UserResource {
 
     private final UserRepository repository;
-    private final UserAssembler assembler;
+    private final UserDTOAssembler assembler;
 
     @Autowired
-    public UserResource(UserRepository repository, UserAssembler assembler) {
+    public UserResource(UserRepository repository, UserDTOAssembler assembler) {
 
         this.repository = repository;
         this.assembler = assembler;
     }
 
-    @GET
-    public Response getAll(){
+   @GetMapping(path = "/users")
+   @ResponseBody
+    public List<EntityModel<UserDTO>> getAll(){
 
-        List<EntityModel<User>> userCollectionModel= repository.findAll().stream().map(assembler::toModel).collect(Collectors.toList());
-        return Response.ok(userCollectionModel).build();
+       return repository.findAll().stream().map(assembler::toModel).toList();
     }
 
-    @GET
-    @Path("{userid}")
-    public Response getOne(@PathParam("userid") Long userId) {
+    @GetMapping(path = "/users/{userId}")
+    @ResponseBody
+    public EntityModel<UserDTO> getOne(@PathVariable Long userId) {
 
-        return Response.ok(assembler.toModel(repository.findByUserId(userId))).build();
+        try {
+
+            return assembler.toModel(repository.findByUserId(userId));
+
+        }catch (NullPointerException e){
+
+            throw new NoSuchUserExistsException("No user with id " + userId + " exists");
+        }
+
+    }
+
+    @PostMapping(path = "/users")
+    public EntityModel<UserDTO> postOne(@RequestBody @Valid LoginDTO newUser){
+
+        if (repository.findByeMail(newUser.getEMail()) != null){
+
+            throw new GenericConflictException();
+        }
+
+        @Valid
+        User user = new User(newUser.getEMail(), newUser.getPassword());
+        user.setActivated(Boolean.FALSE);
+        user = repository.save(user);
+
+        return assembler.toModel(user);
     }
 }
